--- a/features.html
+++ b/features.html
@@ -20,13 +20,13 @@
 		<script src="./static/js/main.js"></script>
 	
     </head>
-    <body>
+    <body class="geonode-features">
 		
         <header class="main">
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1><a class="brand" href="#">GeoNode</a></h1>
+                        <h1><a class="brand" href="/">GeoNode</a></h1>
                     </div>
                     <div class="span6">
                         <div>
@@ -97,7 +97,7 @@
                                 <li>Load shapefiles into database tables</li>
                                 <li>Introduce some basic functions and operations</li>
                             </ul>
-                            <a href="#" class="btn btn-success">Learn about PostGIS</a>
+                            <a href="feature_detail.html" class="btn btn-success">Learn about PostGIS</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="span7 number two">
                         <div class="highlighted-box">
                             <h2>Geo<strong>Server</strong></h2>
-                            <h4>A robust spacial database system.</h4>
+                            <h4>A robust spatial database system.</h4>
                             <ul class="unstyled">
                                 <li>Spatial database overview</li>
                                 <li>Create a spatial database</li>
@@ -134,7 +134,7 @@
                     <div class="span7 number three">
                         <div class="highlighted-box">
                             <h2>Geo<strong>WebCache</strong></h2>
-                            <h4>A robust spacial database system.</h4>
+                            <h4>A robust spatial database system.</h4>
                             <ul class="unstyled">
                                 <li>Spatial database overview</li>
                                 <li>Create a spatial database</li>
