--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 		<script src="./static/js/main.js"></script>
 	
     </head>
-    <body>
+    <body class="">
 		
         <header class="main">
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1><a class="brand" href="#">GeoNode</a></h1>
+                        <h1><a class="brand" href="/">GeoNode</a></h1>
                     </div>
                     <div class="span6">
                         <div>
@@ -96,7 +96,7 @@
                     <div class="span4">
                         <div class="box box-admins">
                             <header class="box-header">
-                                <h2><a href="http://docs.geonode.org/en/latest/index.html#for-administrators">For Admins</a></h2>
+                                <h2><a href="features.html">For Admins</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Complete framework for OGC compliant geospatial web services</li>
@@ -180,6 +180,8 @@
                         </div>
                     </div>
                 </section>
+			</div>
+		</footer>
 
 
 	
