--- a/dev.html
+++ b/dev.html
@@ -20,13 +20,13 @@
 		<script src="./static/js/main.js"></script>
 	
     </head>
-    <body>
+    <body class="">
 		
         <header class="main">
             <div class="container">
                 <div class="row">
                     <div class="span6">
-                        <h1><a class="brand" href="#">GeoNode</a></h1>
+                        <h1><a class="brand" href="/">GeoNode</a></h1>
                     </div>
                     <div class="span6">
                         <div>
