--- a/pages/feature_detail.html
+++ b/pages/feature_detail.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block body_class %}geonode-features{% endblock %}
+
 {% block content %}
         <section class="body">
             <div class="container">
