--- a/pages/features.html
+++ b/pages/features.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block body_class %}geonode-features{% endblock %}
+
 {% block content %}
         <section class="banner">
             <div class="container">
@@ -57,7 +60,7 @@
                                 <li>Load shapefiles into database tables</li>
                                 <li>Introduce some basic functions and operations</li>
                             </ul>
-                            <a href="#" class="btn btn-success">Learn about PostGIS</a>
+                            <a href="feature_detail.html" class="btn btn-success">Learn about PostGIS</a>
                         </div>
                     </div>
                 </div>
@@ -69,7 +72,7 @@
                     <div class="span7 number two">
                         <div class="highlighted-box">
                             <h2>Geo<strong>Server</strong></h2>
-                            <h4>A robust spacial database system.</h4>
+                            <h4>A robust spatial database system.</h4>
                             <ul class="unstyled">
                                 <li>Spatial database overview</li>
                                 <li>Create a spatial database</li>
@@ -94,7 +97,7 @@
                     <div class="span7 number three">
                         <div class="highlighted-box">
                             <h2>Geo<strong>WebCache</strong></h2>
-                            <h4>A robust spacial database system.</h4>
+                            <h4>A robust spatial database system.</h4>
                             <ul class="unstyled">
                                 <li>Spatial database overview</li>
                                 <li>Create a spatial database</li>
