--- a/pages/index.html
+++ b/pages/index.html
@@ -56,7 +56,7 @@
                     <div class="span4">
                         <div class="box box-admins">
                             <header class="box-header">
-                                <h2><a href="http://docs.geonode.org/en/latest/index.html#for-administrators">For Admins</a></h2>
+                                <h2><a href="features.html">For Admins</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Complete framework for OGC compliant geospatial web services</li>
@@ -140,4 +140,6 @@
                         </div>
                     </div>
                 </section>
+			</div>
+		</footer>
 {% endblock %}
