--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="span4">
                         <div class="box box-users">
                             <header class="box-header">
-                                <h2><a href="http://docs.geonode.org/en/latest/index.html#for-users">For Users</a></h2>
+                                <h2><a href="user_features.html">For Users</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Browse and search for geospatial data layers and web services</li>
@@ -82,7 +82,7 @@
                     <div class="span4">
                         <div class="box box-devs">
                             <header class="box-header">
-                                <h2><a href="dev.html">For Developers</a></h2>
+                                <h2><a href="dev_features.html">For Developers</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Developed with Django</li>
@@ -96,7 +96,7 @@
                     <div class="span4">
                         <div class="box box-admins">
                             <header class="box-header">
-                                <h2><a href="features.html">For Admins</a></h2>
+                                <h2><a href="admin_features.html">For Admins</a></h2>
                             </header>
                             <ul class="unstyled">
                                 <li>Complete framework for OGC compliant geospatial web services</li>
