A few tweaks to the feature header sections:

--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -8,8 +8,8 @@
                 <div class="row">
                     <div class="span6">
                         <h1>
-                            <strong>Hello</strong>,<br />
-                            <span>Let us introduce you to the features of <strong>GeoNode</strong>.</span>
+                            <strong>Hello Developer,</strong>,<br />
+                            <span>Let us introduce you to the development features of <strong>GeoNode</strong>.</span>
                         </h1>
                         <p>
                             This workshop will introduce you to the features of GeoNode, a complete web mapping solution.
