--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -8,8 +8,8 @@
                 <div class="row">
                     <div class="span6">
                         <h1>
-                            <strong>Hello</strong>,<br />
-                            <span>Let us introduce you to the features of <strong>GeoNode</strong>.</span>
+                            <strong>Hello User,</strong>,<br />
+                            <span>Let us introduce you to the user features of <strong>GeoNode</strong>.</span>
                         </h1>
                         <p>
                             This tour will introduce you to the features of GeoNode, a complete web mapping solution.
