--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -12,7 +12,7 @@
                             <span>Let us introduce you to the development features of <strong>GeoNode</strong>.</span>
                         </h1>
                         <p>
-                            This workshop will introduce you to the features of GeoNode, a complete web mapping solution.
+                            This tour will introduce you to the features of GeoNode, a complete web mapping solution.
                         </p>
                     </div>
                     <div class="span6">
