--- a/dev_features.html
+++ b/dev_features.html
@@ -49,7 +49,7 @@
                             <span>Let us introduce you to the development features of <strong>GeoNode</strong>.</span>
                         </h1>
                         <p>
-                            This workshop will introduce you to the features of GeoNode, a complete web mapping solution.
+                            This tour will introduce you to the features of GeoNode, a complete web mapping solution.
                         </p>
                     </div>
                     <div class="span6">
@@ -65,8 +65,8 @@
                         <nav class="subnav">
                             <h5>Features:</h5>
                             <ul class="unstyled">
+                                <li><a href="#geoserver">Open Source Geo</strong></a></li>
                                 <li><a href="#postgis">Django</strong></a></li>
-                                <li><a href="#geoserver">Open Source Foundation</strong></a></li>
                                 <li><a href="#webcache">Bootstrap and jQuery</strong></a></li>
                                 <li><a href="#openlayers">APIs</strong></a></li>
                                 <li><a href="#geoext">Third Party</strong></a></li>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="#">Try our <strong>Workshop</strong></a>
+                            <a href="#">Try our <strong>Developer Workshop</strong></a>
                         </div>
                     </div>
                 </div>
@@ -89,8 +89,8 @@
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
-                            <h2>Django</strong></h2>
-                            <h4>Built on the Django Framework</h4>
+                            <h2>Open Source Geo</strong></h2>
+                            <h4>Built on solid, mature Open Source Geospatial projects.</h4>
                             <ul class="unstyled">
                                 <li>Spatial database overview</li>
                                 <li>Create a spatial database</li>
@@ -108,8 +108,8 @@
                 <div class="row">
                     <div class="span7 number two">
                         <div class="highlighted-box">
-                            <h2>Open Source Geo</strong></h2>
-                            <h4>Built on solid, mature Open Source Geospatial projects.</h4>
+                            <h2>Django</strong></h2>
+                            <h4>Built on the Django Framework</h4>
                             <ul class="unstyled">
                                 <li>Spatial database overview</li>
                                 <li>Create a spatial database</li>
