--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <div class="box box-users">
                             <header class="box-header">
                                 <h2><a href="user_features.html">For Users</a></h2>
+								<a href = "user_features.html" class="btn btn-success">Tour</a>
                             </header>
                             <ul class="unstyled">
                                 <li>Browse and search for geospatial data layers and web services</li>
@@ -83,6 +84,7 @@
                         <div class="box box-devs">
                             <header class="box-header">
                                 <h2><a href="dev_features.html">For Developers</a></h2>
+								<a href = "dev_features.html" class="btn btn-success">Tour</a>
                             </header>
                             <ul class="unstyled">
                                 <li>Developed with Django</li>
@@ -97,6 +99,7 @@
                         <div class="box box-admins">
                             <header class="box-header">
                                 <h2><a href="admin_features.html">For Admins</a></h2>
+								<a href = "admin_features.html" class="btn btn-success">Tour</a>
                             </header>
                             <ul class="unstyled">
                                 <li>Complete framework for OGC compliant geospatial web services</li>
