--- a/user_features.html
+++ b/user_features.html
@@ -88,7 +88,7 @@
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
-                            <h2>Explore</h2>
+                            <h2>Spatial Data Discovery</h2>
                             <h4>Browse and search for geospatial data layers and services</h4>
                             <ul class="unstyled">
                                 <li>Spatial database overview</li>
