More work on developer section

--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -28,11 +28,11 @@
                         <nav class="subnav">
                             <h5>Features:</h5>
                             <ul class="unstyled">
-                                <li><a href="#geoserver">Open Source Geo</strong></a></li>
-                                <li><a href="#postgis">Django</strong></a></li>
-                                <li><a href="#webcache">Bootstrap and jQuery</strong></a></li>
-                                <li><a href="#openlayers">APIs</strong></a></li>
-                                <li><a href="#geoext">Third Party</strong></a></li>
+                                <li><a href="#osgeo">Open Source Geospatial</strong></a></li>
+                                <li><a href="#django">Django</strong></a></li>
+                                <li><a href="#front-end">Bootstrap and jQuery</strong></a></li>
+                                <li><a href="#apis">APIs</strong></a></li>
+                                <li><a href="#interoperability">Interoperability</strong></a></li>
                             </ul>
                         </nav>
                     </div>
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details" id="postgis">
+        <section class="feature-details" id="osgeo">
             <div class="container">
                 <div class="row">
                     <div class="span5">
@@ -52,34 +52,37 @@
                     </div>
                     <div class="span7 number one">
                         <div class="highlighted-box">
-                            <h2>Open Source Geo</strong></h2>
-                            <h4>Built on solid, mature Open Source Geospatial projects.</h4>
+                            <h2>Open Source Geospatial</strong></h2>
+                            <h4>Solid foundation on Open Source Geospatial</h4>
                             <ul class="unstyled">
-                                <li>Spatial database overview</li>
-                                <li>Create a spatial database</li>
-                                <li>Load shapefiles into database tables</li>
-                                <li>Introduce some basic functions and operations</li>
+                                <li>Based on reliable, mature open source geospatial software</li>
+                                <li>PostGIS Spatial Databases</li>
+                                <li>GeoServer OGC Services</li>
+                                <li>Geospatial Python libraries</li>
+                                <li>OpenLayers and GeoExt Web Mapping Libraries</li>
                             </ul>
-                            <a href="feature_detail.html" class="btn btn-success">Learn about PostGIS</a>
+                            <a href="opensource_geospatial.html" class="btn btn-success">Learn about GeoNode's Open Source Geospatial Foundation</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="feature-details feature2" id="geoserver">
+        <section class="feature-details feature2" id="django">
             <div class="container">
                 <div class="row">
                     <div class="span7 number two">
                         <div class="highlighted-box">
                             <h2>Django</strong></h2>
-                            <h4>Built on the Django Framework</h4>
+                            <h4>Built on the Django web Framework</h4>
                             <ul class="unstyled">
-                                <li>Spatial database overview</li>
-                                <li>Create a spatial database</li>
-                                <li>Load shapefiles into database tables</li>
-                                <li>Introduce some basic functions and operations</li>
+                                <li>Modern, high productivity web framework</li>
+                                <li>Pluggable GeoNode Django apps</li>
+                                <li>Deployable Template GeoNode projects</li>
+                                <li>Integrated Admin Interface</li>
+                                <li>Large ecosystem of third-party pluggable apps</li>
+                                <li>Spatial GeoDjango ORM Available</li>
                             </ul>
-                            <a href="#" class="btn btn-success">Learn about GeoServer</a>
+                            <a href="django.html" class="btn btn-success">Learn about GeoNode's pluggable Django apps and deployable projects</a>
                         </div>
                     </div>
                     <div class="span5">
@@ -88,7 +91,7 @@
                 </div>
             </div>
         </section>
-        <section class="feature-details feature3" id="webcache">
+        <section class="feature-details feature3" id="front-end">
             <div class="container">
                 <div class="row">
                     <div class="span5">
@@ -97,14 +100,59 @@
                     <div class="span7 number three">
                         <div class="highlighted-box">
                             <h2>Bootstrap and jQuery</strong></h2>
-                            <h4>Modern and flexible front end</h4>
+                            <h4>Modern and flexible web front end</h4>
                             <ul class="unstyled">
-                                <li>Spatial database overview</li>
-                                <li>Create a spatial database</li>
-                                <li>Load shapefiles into database tables</li>
-                                <li>Introduce some basic functions and operations</li>
+                                <li>Bootstrap CSS Framework</li>
+                                <li>jQuery javascript front end and plugins</li>
+                                <li>Django templating system</li>
+                                <li>Themable with lessc and bootswatch</li>
                             </ul>
-                            <a href="#" class="btn btn-success">Learn about GeoWebCache</a>
+                            <a href="bootstrap_jquery.html" class="btn btn-success">Learn about GeoNode's Front End</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="feature-details feature2" id="apis">
+            <div class="container">
+                <div class="row">
+                    <div class="span7 number two">
+                        <div class="highlighted-box">
+                            <h2>APIs<strong></h2>
+                            <h4>Multiple points for application integration</h4>
+                            <ul class="unstyled">
+                                <li>OGC Compliant Web Services</li>
+                                <li>GeoServer REST API</li>
+                                <li>GeoNode Search and REST APIs</li>
+                                <li>Tile Map Service (TMS)</li>
+                            </ul>
+                            <a href="apis.html" class="btn btn-success">Learn about GeoNode's APIs</a>
+                        </div>
+                    </div>
+                    <div class="span5">
+                        <img src="static/img/globe.png" width="347" height="469" alt="Globe" class="feature-img" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="feature-details feature3" id="interoperability">
+            <div class="container">
+                <div class="row">
+                    <div class="span5">
+                        <img src="static/img/iphone_geonode.png" width="309" height="700" alt="Iphone Geonode" class="feature-img" />
+                    </div>
+                    <div class="span7 number three">
+                        <div class="highlighted-box">
+                            <h2>Interoperability</strong></h2>
+                            <h4>Integration with external Applications & Platforms</h4>
+                            <ul class="unstyled">
+                                <li>Federates with other GeoNode's</li>
+                                <li>Federates with other OGC Compliant SDI (CSW/WMS)</li>
+                                <li>Federates with other Open Data Platforms (ckan, junar, socrata)</li>
+                                <li>Integrates with other Social Services & Platforms (Twitter, Facebook, Google+, LinkedIn, Jive, Telligent)</li>
+                                <li>Integrates with other CMS (Wordpress, Drupal)</li>
+                            </ul>
+                            <a href="interoperability.html" class="btn btn-success">Learn more about Interoperability with External systems</a>
                         </div>
                     </div>
                 </div>
