--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -120,7 +120,7 @@
                             <ul class="unstyled">
                                 <li>Review, Rate, Comment</li>
                                 <li>Groups</li>
-                                <li>Activity Stream</li>Y
+                                <li>Activity Stream</li>
                                 <li>Announcements and Notifications</li>
                             </ul>
                             <a href="collaboration.html" class="btn btn-success">Learn about GeoNode's Collaboration Features</a>
