Changing wording of workshop link

--- a/dev_features.html
+++ b/dev_features.html
@@ -75,7 +75,7 @@
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="#">Try our <strong>Developer Workshop</strong></a>
+                            <a href="#">Follow our <strong>Developer Workshop</strong></a>
                         </div>
                     </div>
                 </div>
