--- a/pages/bootstrap_jquery.html
+++ b/pages/bootstrap_jquery.html
@@ -3,73 +3,34 @@
 {% block body_class %}geonode-features{% endblock %}
 
 {% block content %}
-        <section class="body">
-            <div class="container">
-                <div class="row">
-                    <div class="span10">
-                        <nav class="subnav">
-                            <h5>Features:</h5>
-                            <ul class="unstyled">
-                                <li><a href="#postgis">Post<strong>GIS</strong></a></li>
-                                <li><a href="#geoserver">Geo<strong>Server</strong></a></li>
-                                <li><a href="#webcache">Geo<strong>WebCache</strong></a></li>
-                                <li><a href="#openlayers">Open<strong>Layers</strong></a></li>
-                                <li><a href="#geoext">Geo<strong>Ext</strong></a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="span2">
-                        <div class="pull-right link-extra">
-                            <a href="#">Try our <strong>Workshop</strong></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+{% include "_dev_features.html" %}
         <section class="feature-detail">
             <div class="container">
                 <div class="row">
                     <div class="span7">
-                        <h1>Post <strong>GIS</strong></h1>
+                        <h1>Bootstrap and jQuery</strong></h1>
                         <article class="article1">
-                            <h5>PostGIS is a spatial database.</h5>
-                            <p>More accurately, PostGIS is an extension that
-                            turns the PostgreSQL database system into a spatial database. PostGIS is very
-                            similar in functionality to spatial support in SQL Server 2008, Oracle Spatial,
-                            and DB2 Spatial Extender.</p>
-
-                            <p>Providing optimized access to large amounts of spatial data, PostGIS is a fundamental
-                            component of the OpenGeo Suite. To reinforce this notion, we’ll put it down
-                            near the bottom of our architecture diagram, and build the rest of the stack
-                            out on top of it.</p>
+                            <h5>Twitter Bootstrap CSS Framework</h5>
                         </article>
 
                         <article class="article2">
-                            <h5>Why not just use Shapefiles?</h5>
-
-                            <p>The shapefile (and other file formats) have been the standard way of storing and i
-                            interacting with spatial data since GIS software was first written. However, these
-                            "flat" files have the following disadvantages:</p>
-
-                            <ul class="unstyled">
-                                <li>Files require special software to read and write</li>
-                                <li>Concurrent users can cause corruption</li>
-                                <li>Complicated questions require complicated software to answer</li>
-                            </ul>
-
-                            <p>In summation, the combination of support for multiple users, complex ad hoc
-                            queries, and performance on large data sets are what sets spatial databases
-                            apart from file-based systems.</p>
+                            <h5>jQuery Javascript Framework</h5>
                         </article>
 
+                        <article class="article2">
+                            <h5>Django Template System</h5>
+                        </article>
+                        <article class="article2">
+                            <h5>Themable with lessc and bootswatch</h5>
+                        </article>
                         <div class="box2">
-                            <h4><a href="#">Don't take our word for it, see yourself.</a></h4>
+                            <h4><a href="http://docs.geonode.org/en/latest/#for-developers">Read the front end developer guide</a></h4>
                         </div>
                     </div>
                     <div class="span4 offset1">
                         <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="pull-right" />
-                        <a href="#" class="btn btn-warning btn-next pull-right">
-                            <span class="arrow-right">Next: Geo<strong>Server</strong></span>
+                        <a href="apis.html" class="btn btn-warning btn-next pull-right">
+                            <span class="arrow-right">Next: <strong>API's</strong></span>
                         </a>
                     </div>
                 </div>
