--- a/interoperability.html
+++ b/interoperability.html
@@ -47,66 +47,53 @@
                         <nav class="subnav">
                             <h5>Features:</h5>
                             <ul class="unstyled">
-                                <li><a href="#postgis">Post<strong>GIS</strong></a></li>
-                                <li><a href="#geoserver">Geo<strong>Server</strong></a></li>
-                                <li><a href="#webcache">Geo<strong>WebCache</strong></a></li>
-                                <li><a href="#openlayers">Open<strong>Layers</strong></a></li>
-                                <li><a href="#geoext">Geo<strong>Ext</strong></a></li>
+                                <li><a href="opensource_geospatial.html">Open Source Geospatial</strong></a></li>
+                                <li><a href="django.html">Django</strong></a></li>
+                                <li><a href="bootstrap_jquery.html">Bootstrap and jQuery</strong></a></li>
+                                <li><a href="apis.html">APIs</strong></a></li>
+                                <li><a href="interoperability.html">Interoperability</strong></a></li>
                             </ul>
                         </nav>
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="#">Try our <strong>Workshop</strong></a>
+                            <a href="#">Follow the <strong>Developer Workshop</strong></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="feature-detail">
             <div class="container">
                 <div class="row">
                     <div class="span7">
-                        <h1>Post <strong>GIS</strong></h1>
+                        <h1>Interoperability</strong></h1>
                         <article class="article1">
-                            <h5>PostGIS is a spatial database.</h5>
-                            <p>More accurately, PostGIS is an extension that
-                            turns the PostgreSQL database system into a spatial database. PostGIS is very
-                            similar in functionality to spatial support in SQL Server 2008, Oracle Spatial,
-                            and DB2 Spatial Extender.</p>
-
-                            <p>Providing optimized access to large amounts of spatial data, PostGIS is a fundamental
-                            component of the OpenGeo Suite. To reinforce this notion, we’ll put it down
-                            near the bottom of our architecture diagram, and build the rest of the stack
-                            out on top of it.</p>
+                            <h5>Federation with other GeoNodes</h5>
                         </article>
 
                         <article class="article2">
-                            <h5>Why not just use Shapefiles?</h5>
-
-                            <p>The shapefile (and other file formats) have been the standard way of storing and i
-                            interacting with spatial data since GIS software was first written. However, these
-                            "flat" files have the following disadvantages:</p>
-
-                            <ul class="unstyled">
-                                <li>Files require special software to read and write</li>
-                                <li>Concurrent users can cause corruption</li>
-                                <li>Complicated questions require complicated software to answer</li>
-                            </ul>
-
-                            <p>In summation, the combination of support for multiple users, complex ad hoc
-                            queries, and performance on large data sets are what sets spatial databases
-                            apart from file-based systems.</p>
+                            <h5>Federation with other OGC Compliant SDI (CSW/WMS)</h5>
                         </article>
 
+                        <article class="article2">
+                            <h5>Federation with other Open Data Platforms (ckan, junar, socrata)</h5>
+                        </article>
+                        <article class="article2">
+                            <h5>Integrates with other Social Services & Platforms (Twitter, Facebook, Google+, LinkedIn, Jive, Telligent)</h5>
+                        </article>
+                        <article class="article2">
+                            <h5>Integrates with other CMS (Wordpress, Drupal)</h5>
+                        </article>
                         <div class="box2">
-                            <h4><a href="#">Don't take our word for it, see yourself.</a></h4>
+                            <h4><a href="#">Read more about GeoNode Interoperability</a></h4>
                         </div>
                     </div>
                     <div class="span4 offset1">
                         <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="pull-right" />
-                        <a href="#" class="btn btn-warning btn-next pull-right">
-                            <span class="arrow-right">Next: Geo<strong>Server</strong></span>
+                        <a href="/" class="btn btn-warning btn-next pull-right">
+                            <span class="arrow-right">Back to Homepage</strong></span>
                         </a>
                     </div>
                 </div>
