--- a/interoperability.html
+++ b/interoperability.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="span10">
                         <nav class="subnav">
-                            <h5>Features:</h5>
+                            <h5>Developer Features:</h5>
                             <ul class="unstyled">
                                 <li><a href="opensource_geospatial.html">Open Source Geospatial</strong></a></li>
                                 <li><a href="django.html">Django</strong></a></li>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="#">Follow the <strong>Developer Workshop</strong></a>
+                            <a href="http://docs.geonode.org/en/latest/#for-developers" target="_blank">Follow the <strong>Developer Workshop</strong></a>
                         </div>
                     </div>
                 </div>
