--- a/bootstrap_jquery.html
+++ b/bootstrap_jquery.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="span10">
                         <nav class="subnav">
-                            <h5>Developer Features:</h5>
+                            <h5><a href="dev_features.html">Developer Features:</a></h5>
                             <ul class="unstyled">
                                 <li><a href="opensource_geospatial.html">Open Source Geospatial</strong></a></li>
                                 <li><a href="django.html">Django</strong></a></li>
