--- a/mapping.html
+++ b/mapping.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="span10">
                         <nav class="subnav">
-                            <h5>User Features:</h5>
+                            <h5><a href="user_features.html">User Features:</a></h5>
                             <ul class="unstyled">
                                 <li><a href="explore_discover.html"><strong>Explore and Discover</strong></a></li>
                                 <li><a href="import_manage.html"><strong>Import and Manage</strong></a></li>
