Update admin section and pages

--- a/admin_console.html
+++ b/admin_console.html
@@ -45,68 +45,46 @@
                 <div class="row">
                     <div class="span10">
                         <nav class="subnav">
-                            <h5>Features:</h5>
+                            <h5><a href="admin_features.html">Administrator Features:</a></h5>
                             <ul class="unstyled">
-                                <li><a href="#postgis">Post<strong>GIS</strong></a></li>
-                                <li><a href="#geoserver">Geo<strong>Server</strong></a></li>
-                                <li><a href="#webcache">Geo<strong>WebCache</strong></a></li>
-                                <li><a href="#openlayers">Open<strong>Layers</strong></a></li>
-                                <li><a href="#geoext">Geo<strong>Ext</strong></a></li>
+                                <li><a href="ogc_sdi.html">Spatial Data Infrastructure</strong></a></li>
+                                <li><a href="catalog_metadata.html"><strong>Metadata</strong></a></li>
+                                <li><a href="security.html"><strong>Security</strong></a></li>
+                                <li><a href="scale.html"><strong>Scaleablity</strong></a></li>
+                                <li><a href="admin_console.html"><strong>Admin Console</strong></a></li>
                             </ul>
                         </nav>
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="#">Try our <strong>Workshop</strong></a>
+                            <a href="http://docs.geonode.org/en/latest/#for-administrators" target="_blank">Follow the Administrators <strong>Workshop</strong></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="feature-detail">
             <div class="container">
                 <div class="row">
                     <div class="span7">
-                        <h1>Post <strong>GIS</strong></h1>
+                        <h1>Administration Console</h1>
                         <article class="article1">
-                            <h5>PostGIS is a spatial database.</h5>
-                            <p>More accurately, PostGIS is an extension that
-                            turns the PostgreSQL database system into a spatial database. PostGIS is very
-                            similar in functionality to spatial support in SQL Server 2008, Oracle Spatial,
-                            and DB2 Spatial Extender.</p>
-
-                            <p>Providing optimized access to large amounts of spatial data, PostGIS is a fundamental
-                            component of the OpenGeo Suite. To reinforce this notion, we’ll put it down
-                            near the bottom of our architecture diagram, and build the rest of the stack
-                            out on top of it.</p>
+                            <h5></h5>
                         </article>
 
                         <article class="article2">
-                            <h5>Why not just use Shapefiles?</h5>
-
-                            <p>The shapefile (and other file formats) have been the standard way of storing and i
-                            interacting with spatial data since GIS software was first written. However, these
-                            "flat" files have the following disadvantages:</p>
-
-                            <ul class="unstyled">
-                                <li>Files require special software to read and write</li>
-                                <li>Concurrent users can cause corruption</li>
-                                <li>Complicated questions require complicated software to answer</li>
-                            </ul>
-
-                            <p>In summation, the combination of support for multiple users, complex ad hoc
-                            queries, and performance on large data sets are what sets spatial databases
-                            apart from file-based systems.</p>
+                            <h5></h5>
                         </article>
 
                         <div class="box2">
-                            <h4><a href="#">Don't take our word for it, see yourself.</a></h4>
+                            <h4><a href="#">Learn More About</a></h4>
                         </div>
                     </div>
                     <div class="span4 offset1">
                         <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="pull-right" />
-                        <a href="#" class="btn btn-warning btn-next pull-right">
-                            <span class="arrow-right">Next: Geo<strong>Server</strong></span>
+                        <a href="/" class="btn btn-warning btn-next pull-right">
+                            <span class="arrow-right"><strong>Back to homepage</strong></span>
                         </a>
                     </div>
                 </div>
