--- a/admin_features.html
+++ b/admin_features.html
@@ -46,10 +46,10 @@
                     <div class="span6">
                         <h1>
                             <strong>Hello Administrator,</strong>,<br />
-                            <span>Let us introduce you to the administrative features of <strong>GeoNode</strong>.</span>
+                            <span>Let us introduce the administrative features of <strong>GeoNode</strong>.</span>
                         </h1>
                         <p>
-                            This tour will introduce you to the features of GeoNode, a complete web mapping solution.
+                            This tour will introduce the features of GeoNode, a complete web mapping solution.
                         </p>
                     </div>
                     <div class="span6">
@@ -75,7 +75,7 @@
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="http://docs.geonode.org/en/latest/#for-administrators" target="_blank">Follow our Administrators <strong>Workshop</strong></a>
+                            <a href="http://docs.geonode.org/en/latest/#for-administrators" target="_blank">Follow the Administrators <strong>Workshop</strong></a>
                         </div>
                     </div>
                 </div>
