--- a/import_manage.html
+++ b/import_manage.html
@@ -69,7 +69,7 @@
                     <div class="span7">
                         <h1>Import and Manage</h1>
                         <article class="article1">
-                            <h5>Import and Manage your Data</h5>
+                            <h5>Import and Manage Geospatial Data</h5>
                             <p></p>
                             <p></p>
 
