--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </header>
                             <ul class="unstyled">
                                 <li>Browse and search for geospatial data layers and web services</li>
-                                <li>Upload, manage and share your own geospatial data</li>
+                                <li>Upload, manage and share geospatial data</li>
                                 <li>Create and share interactive maps</li>
                                 <li>Collaborate with others using layers and maps</li>
                             </ul>
@@ -142,7 +142,7 @@
                                             </li>
                                             <li class="last">
                                                 <div class="num">3</div>
-                                                <h6>Import your data</h6>
+                                                <h6>Import data</h6>
                                                 <span>
                                                 <p><a href='http://docs.geonode.org/#for-administrators'>Read the admin docs</a></p>
                                                 </span>
