--- a/user_features.html
+++ b/user_features.html
@@ -49,7 +49,7 @@
                             <span>Let us introduce you to the user features of <strong>GeoNode</strong>.</span>
                         </h1>
                         <p>
-                            This tour will introduce you to the features of GeoNode, a complete web mapping solution.
+                            This tour will introduce the features of GeoNode, a complete web mapping solution.
                         </p>
                     </div>
                     <div class="span6">
@@ -108,11 +108,11 @@
                     <div class="span7 number two">
                         <div class="highlighted-box">
                             <h2>Import & Manage</strong></h2>
-                            <h4>upload and securely share your geospatial data</h4>
+                            <h4>upload and securely share geospatial data</h4>
                             <ul class="unstyled">
                                 <li>Import and publish raster, vector and tabular data</li>
-                                <li>Manage your layers Metadata and associated Documents</li>
-                                <li>Securely or Publicly Share your data</li>
+                                <li>Manage layers Metadata and associated Documents</li>
+                                <li>Securely or Publicly Share data</li>
                                 <li>GIS Data Editor (versioning)</li>
                                 <li>Something else</li>
                             </ul>
