--- a/pages/index.html
+++ b/pages/index.html
@@ -113,29 +113,29 @@
                             <div class="row">
                                 <div class="span5">
                                     <article class="documentation">
-                                        <h3><a href="http://docs.geonode.org/en/latest/index.html">Documentation</a></h3>
+                                        <h3><a href="http://docs.geonode.org/en/latest/index.html" target="_blank">Documentation</a></h3>
                                         <p>User, Developer and Administrator Guides.</p>
                                     </article>
                                     <article class="mailing-list">
-                                        <h3><a href="http://geonode.org/communication/">Mailing Lists</a></h3>
+                                        <h3><a href="communication.html#mailing-lists">Mailing Lists</a></h3>
                                         <p>User, Developer and Regional lists and archives.</p>
                                     </article>
                                     <article class="issue-tracker">
-                                        <h3><a href="https://github.com/GeoNode/geonode/issues">Issue Tracker</a></h3>
+                                        <h3><a href="https://github.com/GeoNode/geonode/issues" target="_blank">Issue Tracker</a></h3>
                                         <p>Bugs, Feature Requests, Milestones and Roadmap.</p>
                                     </article>
                                 </div>
                                 <div class="span5">
                                     <article class="faqs">
-                                        <h3><a href="https://github.com/geonode/geonode/wiki">FAQs</a></h3>
+                                        <h3><a href="faqs.html">FAQs</a></h3>
                                         <p>Frequently Asked Questions about GeoNode.</p>
                                     </article>
                                     <article class="irc">
-                                        <h3><a href="http://webchat.freenode.net/?channels=#geonode">IRC</a></h3>
+                                        <h3><a href="communication.html#irc">IRC</a></h3>
                                         <p>#geonode on freenode.net Real-time discussion and help.</p>
                                     </article>
                                     <article class="sites-gallery">
-                                        <h3><a href="http://geonode.org/gallery/">Sites Gallery</a></h3>
+                                        <h3><a href="gallery.html">Sites Gallery</a></h3>
                                         <p>A collection of sites implemented using GeoNode</p>
                                     </article>
                                 </div>
