Change header in sites

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -7,7 +7,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span7">
-                        <h1>Gallery</h1>
+                        <h1>Sites Gallery</h1>
                         <article class="article1">
                             <h5></h5>
 <h5>Gallery</h5>
