--- a/license.html
+++ b/license.html
@@ -46,9 +46,14 @@
                     <div class="span7">
                         <h1>License</h1>
                         <article class="article1">
-                            <h5></h5>
+                            <h5>Source Code License</h5>
+							<p>GPL</p>
                         </article>
 
+                        <article class="article1">
+                            <h5>Documentation and Website Content License</h5>
+							<p>cc-by-sa</p>
+                        </article>
                         <div class="box2">
                             <h4><a href="#">Learn More About</a></h4>
                         </div>
