Add title block

--- a/pages/explore_discover.html
+++ b/pages/explore_discover.html
@@ -1,5 +1,7 @@
 {% extends "user_features.html" %}
 
+{% block title %} Explore and Discover — {{ block.super }} {% endblock %}
+
 {% block content %}
 {% include "_user_features.html" %}
         <section class="feature-detail">
