--- a/pages/interoperability.html
+++ b/pages/interoperability.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} Interoperability — {{ block.super }} {% endblock %}
+
 {% block body_class %}geonode-features{% endblock %}
 
 {% block content %}
