--- a/pages/ogc_sdi.html
+++ b/pages/ogc_sdi.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} Spatial Data Infrastructure — {{ block.super }} {% endblock %}
+
 {% block body_class %}geonode-features{% endblock %}
 
 {% block content %}
