--- a/communication.html
+++ b/communication.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8">
-        <title>GeoNode</title>
+        <title> Communication — GeoNode </title> 
         <link rel="shortcut icon" href="static/img/favicon.ico" />
         <meta name='description' content='GeoNode'/>
         <meta name='keywords' content='GeoNode'/>
