--- a/pages/admin_console.html
+++ b/pages/admin_console.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} Admin Console — {{ block.super }} {% endblock %}
+
 {% block body_class %}geonode-features{% endblock %}
 
 {% block content %}
