--- a/pages/catalog_metadata.html
+++ b/pages/catalog_metadata.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} Catalog Metadata — {{ block.super }} {% endblock %}
+
 {% block body_class %}geonode-features{% endblock %}
 
 {% block content %}
