--- a/pages/dev.html
+++ b/pages/dev.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block title %} Developers — {{ block.super }} {% endblock %}
+
 {% block content %}
         <section class="body">
     <div id="container">
