--- a/pages/error.html
+++ b/pages/error.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block title %} Error — {{ block.super }} {% endblock %}
+
 {% block content %}
 <script type="text/javascript" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 
