--- a/pages/opensource_geospatial.html
+++ b/pages/opensource_geospatial.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} Open Source Geospatial — {{ block.super }} {% endblock %}
+
 {% block body_class %}geonode-features{% endblock %}
 
 {% block content %}
