--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %} User Features — {{ block.super }} {% endblock %}
+
 {% block body_class %}geonode-features{% endblock %}
 
 {% block content %}
